@@ -3,6 +3,7 @@ package com.keenti.finances.infrastructure.adapter.in.rest;
 import com.keenti.finances.domain.model.PaymentRecord;
 import com.keenti.finances.domain.port.in.PaymentRecordUseCase;
 import jakarta.inject.Inject;
+import jakarta.validation.Valid;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.PUT;
@@ -11,8 +12,6 @@ import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("/api/subscriptions/{subscriptionId}/payments")
 @Consumes(MediaType.APPLICATION_JSON)
@@ -24,8 +23,8 @@ public class PaymentRecordResource {
 
     @GET
     public Response list(@PathParam("subscriptionId") Long subscriptionId) {
-        List<PaymentRecordResponse> body = paymentRecordUseCase.listBySubscription(subscriptionId)
-            .stream().map(this::toResponse).collect(Collectors.toList());
+        var body = paymentRecordUseCase.listBySubscription(subscriptionId)
+            .stream().map(this::toResponse).toList();
         return Response.ok(body).build();
     }
 
@@ -37,11 +36,21 @@ public class PaymentRecordResource {
         return Response.ok(toResponse(updated)).build();
     }
 
+    @PUT
+    @Path("/{paymentId}/link-transaction")
+    public Response linkTransaction(@PathParam("subscriptionId") Long subscriptionId,
+                                    @PathParam("paymentId") Long paymentId,
+                                    @Valid LinkTransactionRequest request) {
+        PaymentRecord updated = paymentRecordUseCase.linkTransaction(
+            subscriptionId, paymentId, request.transactionId());
+        return Response.ok(toResponse(updated)).build();
+    }
+
     private PaymentRecordResponse toResponse(PaymentRecord r) {
         return new PaymentRecordResponse(
             r.getId(), r.getSubscriptionId(), r.getMemberId(),
             r.getBillingDate(), r.getAmount(), r.getStatus(),
-            r.getPaidDate(), r.getCreatedAt()
+            r.getPaidDate(), r.getTransactionId(), r.getCreatedAt()
         );
     }
 }
