@@ -4,13 +4,13 @@ import com.keenti.finances.domain.model.Contact;
 import com.keenti.finances.domain.model.TrashItem;
 import com.keenti.finances.domain.port.out.ContactRepository;
 import com.keenti.finances.infrastructure.adapter.in.rest.UserContext;
+import com.keenti.finances.infrastructure.persistence.HibernateSessions;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.hibernate.Session;
 
 @ApplicationScoped
@@ -28,7 +28,7 @@ public class PanacheContactRepository implements ContactRepository {
         return ContactEntity.<ContactEntity>listAll()
                 .stream()
                 .map(this::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -66,7 +66,7 @@ public class PanacheContactRepository implements ContactRepository {
 
     @Override
     public void restoreById(Long id) {
-        Session session = em.unwrap(Session.class);
+        Session session = HibernateSessions.unwrap(em);
         session.disableFilter("softDelete");
         try {
             ContactEntity entity = ContactEntity.findById(id);
@@ -79,8 +79,9 @@ public class PanacheContactRepository implements ContactRepository {
     }
 
     @Override
+    @SuppressWarnings("null")
     public Optional<TrashItem> findDeletedById(Long id) {
-        Session session = em.unwrap(Session.class);
+        Session session = HibernateSessions.unwrap(em);
         session.disableFilter("softDelete");
         try {
             return ContactEntity.<ContactEntity>find(
@@ -93,15 +94,16 @@ public class PanacheContactRepository implements ContactRepository {
     }
 
     @Override
+    @SuppressWarnings("null")
     public List<TrashItem> findAllDeleted() {
-        Session session = em.unwrap(Session.class);
+        Session session = HibernateSessions.unwrap(em);
         session.disableFilter("softDelete");
         try {
             return ContactEntity.<ContactEntity>find(
                     "deletedAt IS NOT NULL ORDER BY deletedAt DESC")
                     .stream()
                     .map(e -> new TrashItem(e.id, "contact", e.name, e.deletedAt))
-                    .collect(Collectors.toList());
+                    .toList();
         } finally {
             session.enableFilter("softDelete");
         }
