@@ -1,10 +1,12 @@
 package com.keenti.finances.infrastructure.adapter.out.persistence;
 
 import com.keenti.finances.domain.model.MonthSummary;
+import com.keenti.finances.domain.model.PagedResult;
 import com.keenti.finances.domain.model.TrashItem;
 import com.keenti.finances.domain.model.Transaction;
 import com.keenti.finances.domain.port.out.TransactionRepository;
 import com.keenti.finances.infrastructure.adapter.in.rest.UserContext;
+import com.keenti.finances.infrastructure.persistence.HibernateSessions;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
@@ -15,7 +17,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.hibernate.Session;
 
 @ApplicationScoped
@@ -34,7 +35,29 @@ public class PanacheTransactionRepository implements TransactionRepository {
                 "ORDER BY transactionDate DESC, createdAt DESC")
                 .stream()
                 .map(this::toDomain)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    public PagedResult<Transaction> findPage(int pageIndex, int pageSize, String sortBy, boolean descending) {
+        String orderBy = transactionOrderBy(sortBy, descending);
+        long totalItems = em.createQuery("SELECT COUNT(t) FROM TransactionEntity t", Long.class)
+                .getSingleResult();
+        int totalPages = pageSize <= 0 ? 0 : (int) Math.ceil(totalItems / (double) pageSize);
+        int effectivePageIndex = totalPages == 0 ? 0 : Math.min(pageIndex, totalPages - 1);
+
+        List<Transaction> items = em.createQuery(
+                    "SELECT t FROM TransactionEntity t " +
+                    "LEFT JOIN t.category cat " +
+                    "LEFT JOIN t.contact c " +
+                    "ORDER BY " + orderBy,
+                    TransactionEntity.class)
+                .setFirstResult(effectivePageIndex * pageSize)
+                .setMaxResults(pageSize)
+                .getResultStream()
+                .map(this::toDomain)
+                .toList();
+        return new PagedResult<>(items, effectivePageIndex, pageSize, totalItems, totalPages);
     }
 
     @Override
@@ -123,7 +146,7 @@ public class PanacheTransactionRepository implements TransactionRepository {
                 "subscription.id = ?1 ORDER BY transactionDate DESC, createdAt DESC", subscriptionId)
                 .stream()
                 .map(this::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -133,7 +156,7 @@ public class PanacheTransactionRepository implements TransactionRepository {
 
     @Override
     public void restoreById(Long id) {
-        Session session = em.unwrap(Session.class);
+        Session session = HibernateSessions.unwrap(em);
         session.disableFilter("softDelete");
         try {
             TransactionEntity entity = TransactionEntity.findById(id);
@@ -146,8 +169,9 @@ public class PanacheTransactionRepository implements TransactionRepository {
     }
 
     @Override
+    @SuppressWarnings("null")
     public Optional<TrashItem> findDeletedById(Long id) {
-        Session session = em.unwrap(Session.class);
+        Session session = HibernateSessions.unwrap(em);
         session.disableFilter("softDelete");
         try {
             return TransactionEntity.<TransactionEntity>find(
@@ -162,8 +186,9 @@ public class PanacheTransactionRepository implements TransactionRepository {
     }
 
     @Override
+    @SuppressWarnings("null")
     public List<TrashItem> findAllDeleted() {
-        Session session = em.unwrap(Session.class);
+        Session session = HibernateSessions.unwrap(em);
         session.disableFilter("softDelete");
         try {
             return TransactionEntity.<TransactionEntity>find(
@@ -172,7 +197,7 @@ public class PanacheTransactionRepository implements TransactionRepository {
                     .map(e -> new TrashItem(e.id, "transaction",
                             e.description != null ? e.description : e.amount.toPlainString(),
                             e.deletedAt))
-                    .collect(Collectors.toList());
+                    .toList();
         } finally {
             session.enableFilter("softDelete");
         }
@@ -193,6 +218,20 @@ public class PanacheTransactionRepository implements TransactionRepository {
                 : null;
         e.user = UserEntity.findById(userContext.getUserId());
         return e;
+    }
+
+    private String transactionOrderBy(String sortBy, boolean descending) {
+        String direction = descending ? "DESC" : "ASC";
+        String expression = switch (sortBy) {
+            case "amount" -> "t.amount";
+            case "direction" -> "t.direction";
+            case "description" -> "COALESCE(t.description, '')";
+            case "categoryName" -> "cat.name";
+            case "contactName" -> "COALESCE(c.name, '')";
+            case "transactionDate" -> "t.transactionDate";
+            default -> "t.transactionDate";
+        };
+        return expression + " " + direction + ", t.transactionDate DESC, t.createdAt DESC, t.id DESC";
     }
 
     private Transaction toDomain(TransactionEntity e) {
